# Test-Magic

./: .gitignore  Anchor.toml  Cargo.toml  README.md  test-update.txt
backend/: app.py  requirements.txt
frontend/: app.js  index.html  styles.css
frontend/idl/: huellazo.json
programs/huellazo/: Cargo.toml
programs/huellazo/src/: constants.rs  error.rs  lib.rs  state.rs
programs/huellazo/src/instructions/: commit.rs  delegate.rs  initialize.rs  mint_business.rs  mint_place.rs  mod.rs  undelegate.rs
